<resources>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">WinwinAdmin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="home">Home</string>
    <string name="analisa">Analisa</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="collection">Collection</string>
    <string name="other">Other</string>
    <string name="transaksi">Transaksi</string>
    <string name="investasi">Investasi</string>
    <string name="hello">Hello</string>
    <string name="tasklist">Tasklist</string>
    <string name="list_klien">List Klien</string>
    <string name="komunikasi">Komunikasi</string>
    <string name="laporan">Laporan</string>
    <string name="status_pinj">Status Pinjaman</string>
    <string name="archive">Archive</string>
    <string name="pencarian">Pencairan</string>
    <string name="no_pelanggan">Nomer Pelanggan</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="cari">Cari</string>
    <string name="tgl_dan_waktu">Tanggal dan Waktu</string>
    <string name="tugas">Tugas</string>
    <string name="pengajuan_terkait">Pengajuan Terkait</string>
    <string name="no_pengajuan_terkait">No Pengajuan Terkait</string>
    <string name="klien_terkait">Klien Terkait</string>
    <string name="status">Status</string>
    <string name="pilihan">Pilihan</string>
    <string name="tgl_buat">Tanggal Buat</string>
    <string name="nomor_pengajuan">Nomor Pengajuan</string>
    <string name="klien">Klien</string>
    <string name="pinjam">Pinjam</string>
    <string name="durasi">Durasi</string>
    <string name="bayar">Bayar (Rp)</string>
    <string name="jatuh_tempo">Jatuh Tempo</string>
    <string name="status_proses">Status Proses</string>
    <string name="pengajuan">Pengajuan</string>
    <string name="data_pengajuan">Data Pengajuan</string>
    <string name="daftar_pengajuan">Daftar Pengajuan</string>
    <string name="bank">Bank</string>
    <string name="no_nama_rek">Nomor &amp; Nama Rekening</string>
    <string name="jumlah_trf">Jumlah Transfer (Rp)</string>
    <string name="jumlah_trf_norp">Jumlah Transfer</string>
    <string name="jumlah_ref">Jumlah Referral</string>
    <string name="tgl_bayar">Tanggal Bayar</string>
    <string name="nominal">Nominal (Rp)</string>
    <string name="no_pengajuan_klien">No. Pengajuan &amp; Klien</string>
    <string name="catatan">Catatan</string>
    <string-array name="media_bayar">
        <item>Transfer ke BCA</item>
        <item>Kebijaksanaan Perusahaan</item>
    </string-array>
    <string name="jenis_pembayaran">Jenis Pembayaran</string>
    <string name="tgl_permintaan">Tanggal Permintaan</string>
    <string name="no_pengajuan_pelanggan">No. Pengajuan &amp; Pelanggan</string>
    <string name="tgl_mulai_perpanjang">Tanggal Mulai Perpanjang</string>
    <string name="durasi_hari">Durasi (Hari)</string>
    <string name="jatuh_tempo_baru">Jatuh Tempo Baru</string>
    <string name="tgl_denda">Tanggal Denda</string>
    <string name="no_pengajuan">Nomor Pengajuan</string>
    <string name="jumlah_denda">Jumlah Denda (Rp)</string>
    <string name="keterangan">Keterangan</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="perpanjangan">Perpanjangan</string>
    <string name="denda">Denda</string>
    <string name="sidebar">Sidebar</string>
    <string name="sidebar_right">SidebarRight</string>
    <string name="index">Index</string>
    <string name="title">Title</string>
    <string name="menu">Menu</string>
    <string name="tipe_tugas">Tipe Tugas</string>
    <string name="tambah_inputan">Tambah Inputan</string>
    <string name="target_tanggal">Target Tanggal</string>
    <string name="pelaksana">Pelaksana</string>
    <string name="save">Save</string>
    <string name="ganti_foto">Ganti Foto</string>
    <string name="data_pribadi_klien">Data Pribadi Klien</string>
    <string name="nama_klien">Nama Klien</string>
    <string name="email">Email</string>
    <string name="jenis_kel">Jenis_Kel</string>
    <string name="no_ktp">No Ktp</string>
    <string name="alamat">Alamat</string>
    <string name="kota">Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string-array name="status_rumah">
        <item>Milik Orang Tua</item>
        <item>Milik Sendiri</item>
        <item>Sewa</item>
        <item>Kost</item>
        <item>Lain-lain</item>
    </string-array>
    <string name="kode_pos">Kode Pos</string>
    <string name="lama_tinggal_tahun">Lama Tinggal (Tahun)</string>
    <string name="lama_tinggal_bulan">Lama Tinggal (Bulan)</string>
    <string name="no._telp_hp">No. Telp/HP</string>
    <string name="data_pekerjaan_klien">Data Pekerjaan Klien</string>
    <string name="jenis_perusahaan">Jenis Perusahaan</string>
    <string name="nama_pekerjaan">Nama Pekerjaan</string>
    <string name="hrd_perusahaan">HRD Perusahaan</string>
    <string name="posisi_di_perusahaan">Posisi di Perusahaan</string>
    <string name="lama_bekerja">Lama Bekerja</string>
    <string name="alamat_perusahaan">Alamat Perusahaan</string>
    <string name="telepon_perusahaan">Telepon Perusahaan</string>
    <string name="gaji">Gaji</string>
    <string name="tanggal_gaji">Tanggal Gaji</string>
    <string name="data_keluarga">Data Keluarga</string>
    <string name="nama_anggota_keluarga_serumah">Nama Anggota Keluarga Serumah</string>
    <string name="telepon_anggota_keluarga_serumah">Telepon Anggota Keluarga Serumah</string>
    <string name="nama_anggota_keluarga_tidak_serumah">Nama Anggota Keluarga Tidak Serumah</string>
    <string name="jenis_hubungan_anggota_keluarga_tidak_serumah">Jenis Hubungan Anggota Keluarga Tidak Serumah</string>
    <string name="alamat_anggota_keluarga_tidak_serumah">Alamat Anggota Keluarga Tidak Serumah</string>
    <string name="data_rekening">Data Rekening</string>
    <string name="bank_rekening_klien">Bank Rekening Klien</string>
    <string name="lokasi_cabang_bank">Lokasi Cabang Bank</string>
    <string name="nama_pemilik_rekening">Nama Pemilik Rekening</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="nomer_rekening">Nomor Rekening</string>
    <string name="no_rekening">No Rekening</string>
    <string name="info_klien">Info Klien</string>
    <string name="isi_pesan">Isi Pesan</string>
    <string name="kirim_email">Kirim Email</string>
    <string name="kirim_sms">Kirim SMS</string>
    <string name="data_pembayaran">Data Pembayaran</string>
    <string name="data_pencarian">Data Pencarian</string>
    <string name="data_pencairan">Data Pencairan</string>
    <string name="data_trf">Data Transfer Reward Reveral</string>
    <string name="daftar_trf">Daftar Transfer Reward Reveral</string>
    <string name="edit_profile">Edit My Profile</string>
    <string name="daftar_reward">Daftar Klien Reward Referral</string>
    <string name="daftar_u_reward">Daftar Klien Untuk Reward Referral</string>
    <string name="help">Help</string>
    <string name="setting">Setting</string>
    <string name="log_aktivitas">Log Aktivitas</string>
    <string name="logout">Logout</string>
    <string name="daftar_artikel">Daftar Artikel</string>
    <string name="daftar_testi">Daftar Testimoni</string>
    <string name="karyawan_pengguna">Karyawan &amp; Pengguna</string>
    <string name="daftar_ref">Daftar Referensi</string>
    <string name="referensi_a">Referensi A</string>
    <string name="referensi_b">Referensi B</string>
    <string name="referensi_c">Referensi C</string>
    <string name="referensi_d">Referensi D</string>
    <string name="daftar_jenis_bayar">Daftar Jenis Bayar</string>
    <string name="daftar_rekom_kota">Daftar Rekomendasi Kota</string>
    <string name="daftar_bank_klien">Daftar Bank Klien</string>
    <string name="daftar_media_bayar">Daftar Media Bayar</string>
    <string name="daftar_hubungan_keluarga">Daftar Hubungan Keluarga</string>
    <string name="daftar_proses_import">Daftar Proses Import</string>
    <string name="daftar_jenis_kelamin">Daftar Jenis Kelamin</string>
    <string name="daftar_status_klien">Daftar Status Klien</string>
    <string name="daftar_tahap_pengajuan">Daftar Tahap Pengajuan</string>
    <string name="daftar_tahap_pencairan">Daftar Tahap Pencairan</string>
    <string name="daftar_status_pengajuan">Daftar Status Pengajuan</string>
    <string name="daftar_status_testimoni">Daftar Status Testimoni</string>
    <string name="daftar_jenis_pembayaran">Daftar Jenis Pembayaran</string>
    <string name="daftar_media_pembayaran">Daftar Media Pembayaran</string>
    <string name="daftar_syarat_daftar">Daftar Syarat Daftar</string>
    <string name="daftar_syarat_pengajuan">Daftar Syarat Pengajuan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama">Nama</string>
    <string name="hak_akses">Hak Akses</string>
    <string name="aksi">Aksi</string>
    <string name="judul">Judul</string>
    <string name="penulis">Penulis</string>
    <string name="kata_kunci">Kata Kunci</string>
    <string name="tambah_artikel">Tambah Artikel</string>
    <string name="status_artikel">Status Artikel</string>
    <string name="isi_artikel">Isi Artikel</string>
    <string name="kirim">Kirim</string>
    <string name="tipe">Tipe</string>
    <string name="tabel">Tabel</string>
    <string name="akses_ip">Akses IP</string>
    <string name="akses_browser">Akses Browser</string>
    <string name="baru">Baru</string>
    <string name="aktif">Aktif</string>
    <string name="non_aktif">Non Aktif</string>
    <string name="lunas">Lunas</string>
    <string name="bayar_sebagian">Bayar Sebagian</string>
    <string name="or">OR</string>
    <string name="rencana_pencairan">Rencana Pencairan</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="tanggal_pencairan">Tanggal Pencairan</string>
    <string name="histori_pembayaran">Histori Pembayaran</string>
    <string name="histori_perpanjangan">Histori Perpanjangan</string>
    <string name="histori_denda">Histori Denda</string>
    <string name="pinjaman_ini_sudah_lunas">Pinjaman ini sudah lunas</string>
    <string name="set_auto_setujui_untuk_pengajuan_berikutnya">Set auto setujui untuk pengajuan berikutnya?</string>
    <string name="rating_klien_saat_ini">RATING KLIEN SAAT INI</string>
    <string name="update_rating_klien">Update Rating Klien:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="pencairan">Pencairan</string>
    <string name="formulir_pengguna">Formulir Pengguna</string>
    <string name="role_pengguna">Role Pengguna</string>
    <string name="analis_memroses_pengajuan_baru">Analis(Memroses pengajuan baru)</string>
    <string name="perpanjangan_menambah_perpanjangan">Perpanjangan (Menambah perpanjangan)</string>
    <string name="collection_mengatur_denda_harian_daftar_debt_collector">Collection (Mengatur denda harian, daftar debt collector)</string>
    <string name="pencairan_mengatur_data_pencairan_dana">Pencairan (Mengatur data pencairan dana)</string>
    <string name="persetujuan_memberikan_persetujuan_penolakan_pada_pengajuan">Persetujuan (Memberikan persetujuan / penolakan pada pengajuan)</string>
    <string name="pelunasan_menambah_pembayaran_pelunasan">Pelunasan (Menambah pembayaran / pelunasan)</string>
    <string name="denda_menambah_denda">Denda (Menambah denda)</string>
    <string name="jumlah_transfer">Jumlah Transfer</string>
    <string name="penugasan">Penugasan</string>
</resources>