<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:background="@color/grey"
        android:textSize="18sp"
        android:text="@string/formulir_pengguna"/>

    <View
        android:id="@+id/view1"
        android:layout_below="@id/text1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input4"
        android:layout_below="@id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input5"
        android:layout_below="@id/input4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input6"
        android:layout_below="@id/input5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/penugasan"/>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/input6"
        android:text="@string/role_pengguna"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/text2"
        android:text="@string/analis_memroses_pengajuan_baru"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/item2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/item1"
        android:text="@string/pelunasan_menambah_pembayaran_pelunasan"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/item3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/item2"
        android:text="@string/perpanjangan_menambah_perpanjangan"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/item4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/item3"
        android:text="@string/denda_menambah_denda"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/item5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/item4"
        android:text="@string/collection_mengatur_denda_harian_daftar_debt_collector"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/item6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/item5"
        android:text="@string/pencairan_mengatur_data_pencairan_dana"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/item7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/item6"
        android:text="@string/persetujuan_memberikan_persetujuan_penolakan_pada_pengajuan"/>

    <Button
        android:id="@+id/save"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/item7"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/bg_save"
        android:textColor="@android:color/white"
        android:text="@string/save"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_alignTop="@id/save"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

</RelativeLayout>